[package]
name = "lnk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
clap = { version = "4.3.4", features = ["derive", "env"] }
fast_qr = { version = "0.9.0", features = ["svg"] }
http = "0.2.9"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
